--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<nav class="header-nav">
 					<a href="./index.html" class="web-logo">Web<span class="studio-logo">Studio</span></a>
 					<ul class="page-nav">
-						<li><a href="./index.html" class="page-link-active">Studio</a></li>
+						<li><a href="./index.html" class="page-link current">Studio</a></li>
 						<li>
 							<a href="#portfolio" class="page-link">Portfolio</a>
 						</li>
@@ -50,30 +50,46 @@
 			<!-- HERO -->
 			<section class="hero section">
 				<div class="container">
+					<div class="backdrop">
+						<div class="div-form-hero">
+							<button class="close-form" type="button">
+								<svg class="close-icon" width="8" height="8">
+									<use href="./images/icons.svg#icon-close-black"></use>
+								</svg>
+							</button>
+							<p>Leave your contacts and we will call you back</p>
+							<form name="order" class="form-hero">
+								<label class="label-input" for="name">Name</label>
+								<div class="input-hero-div"
+									><input type="text" name="name" id="name" class="input-hero" />
+									<svg width="18" height="18" class="svg-hero">
+										<use href="./images/icons.svg#icon-person-black"></use>
+									</svg>
+								</div>
+								<label class="label-input" for="phone">Phone</label>
+								<div class="input-hero-div">
+									<input type="number" name="phone" id="phone" class="input-hero" />
+									<svg width="18" height="24" class="svg-hero">
+										<use href="./images/icons.svg#icon-phone-black"></use>
+									</svg>
+								</div>
+								<label class="label-input" for="email" Email></label>
+								<div class="input-hero-div">
+									<input type="email" name="email" id="email" class="input-hero" />
+									<svg width="18" height="24" class="svg-hero">
+										<use href="./images/icons.svg#icon-email-black"></use>
+									</svg>
+								</div>
+								<label class="label-input" for="comment">Comment</label>
+								<textarea name="comment" id="comment" placeholder="Text input" class="textarea"></textarea>
+								<input type="checkbox" name="accept" value="I accept the terms and conditions of the Privacy Policy" />
+								<button type="submit">Send</button>
+							</form>
+						</div>
+					</div>
 					<h1 class="hero-title">Effective Solutions for Your Business</h1>
 					<div>
 						<button type="button" class="hero-button">Order Service</button>
-						<!-- <form name="order" class="form-order">
-							<h3>Leave your contacts and we will call you back</h3>
-							<label>
-								Name
-								<input type="text" name="name" autofocus />
-							</label>
-							<label>
-								Phone
-								<input type="number" name="phone" />
-							</label>
-							<label>
-								Email
-								<input type="email" name="email" />
-							</label>
-							<label>
-								Comment
-								<textarea name="comment" rows="5" placeholder="Text input"></textarea>
-							</label>
-							<input type="checkbox" name="accept" value="I accept the terms and conditions of the Privacy Policy" />
-							<button type="submit">Send</button>
-						</form> -->
 					</div>
 				</div>
 			</section>
@@ -420,13 +436,13 @@
 						<input type="email" name="email" placeholder="E-mail" class="input" />
 						<a class="footer-button" href=""
 							>Subscribe<svg class="icon-color" width="24" height="24">
-								<use href="./images/icons-form.svg#icon-subscribe"></use>
+								<use href="./images/icons.svg#icon-subscribe"></use>
 							</svg>
 						</a>
 					</div>
 				</form>
 			</div>
 		</footer>
-		<script src="./js/scrypt.js"></script>
+		<!-- <script src="./js/scrypt.js"></script> -->
 	</body>
 </html>
