--- a/index.html
+++ b/index.html
@@ -50,43 +50,6 @@
 			<!-- HERO -->
 			<section class="hero section">
 				<div class="container">
-					<div class="backdrop">
-						<div class="div-form-hero">
-							<button class="close-form" type="button">
-								<svg class="close-icon" width="8" height="8">
-									<use href="./images/icons.svg#icon-close-black"></use>
-								</svg>
-							</button>
-							<p>Leave your contacts and we will call you back</p>
-							<form name="order" class="form-hero">
-								<label class="label-input" for="name">Name</label>
-								<div class="input-hero-div"
-									><input type="text" name="name" id="name" class="input-hero" />
-									<svg width="18" height="18" class="svg-hero">
-										<use href="./images/icons.svg#icon-person-black"></use>
-									</svg>
-								</div>
-								<label class="label-input" for="phone">Phone</label>
-								<div class="input-hero-div">
-									<input type="number" name="phone" id="phone" class="input-hero" />
-									<svg width="18" height="24" class="svg-hero">
-										<use href="./images/icons.svg#icon-phone-black"></use>
-									</svg>
-								</div>
-								<label class="label-input" for="email" Email></label>
-								<div class="input-hero-div">
-									<input type="email" name="email" id="email" class="input-hero" />
-									<svg width="18" height="24" class="svg-hero">
-										<use href="./images/icons.svg#icon-email-black"></use>
-									</svg>
-								</div>
-								<label class="label-input" for="comment">Comment</label>
-								<textarea name="comment" id="comment" placeholder="Text input" class="textarea"></textarea>
-								<input type="checkbox" name="accept" value="I accept the terms and conditions of the Privacy Policy" />
-								<button type="submit">Send</button>
-							</form>
-						</div>
-					</div>
 					<h1 class="hero-title">Effective Solutions for Your Business</h1>
 					<div>
 						<button type="button" class="hero-button">Order Service</button>
@@ -430,19 +393,78 @@
 						</li>
 					</ul>
 				</div>
-				<form class="form-footer">
+				<div class="div-footer">
 					<p class="social-footer">Subscribe</p>
-					<div class="input-style">
+					<form class="form-footer">
+						<label class="label-footer"></label>
 						<input type="email" name="email" placeholder="E-mail" class="input" />
-						<a class="footer-button" href=""
+						<button class="footer-button"
 							>Subscribe<svg class="icon-color" width="24" height="24">
 								<use href="./images/icons.svg#icon-subscribe"></use>
 							</svg>
-						</a>
-					</div>
-				</form>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
+		<div class="backdrop">
+			<div class="div-form-hero">
+				<button class="close-form" type="button">
+					<svg class="close-icon" width="8" height="8">
+						<use href="./images/icons.svg#icon-close"></use>
+					</svg>
+				</button>
+				<p class="form-text">Leave your contacts and we will call you back</p>
+				<form name="order">
+					<div class="form-hero">
+						<label class="label-input" for="user-name">Name</label>
+						<div class="input-hero-div"
+							><input type="text" name="user-name" id="user-name" class="input-hero" />
+							<svg width="18" height="24" class="svg-hero">
+								<use href="./images/icons.svg#icon-person-black"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="form-hero">
+						<label class="label-input" for="phone">Phone</label>
+						<div class="input-hero-div">
+							<input type="number" name="phone" id="phone" class="input-hero" />
+							<svg width="18" height="24" class="svg-hero">
+								<use href="./images/icons.svg#icon-phone-black"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="form-hero">
+						<label class="label-input" for="email">Email</label>
+						<div class="input-hero-div">
+							<input type="email" name="email" id="email" class="input-hero" />
+							<svg width="18" height="24" class="svg-hero">
+								<use href="./images/icons.svg#icon-email-black"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="form-comment">
+						<label class="label-input" for="user-comment">Comment</label>
+						<textarea name="user-comment" id="user-comment" placeholder="Text input" class="textarea"></textarea>
+					</div>
+					<div class="form-checkbox">
+						<input
+							type="checkbox"
+							name="user-privacy"
+							id="user-privacy"
+							value="true"
+							class="input-checkbox visually-hidden"
+						/>
+						<label for="user-privacy" class="label-checkbox"
+							>I accept the terms and conditions of the <span class="span-checkbox"><svg width="10" height="8">
+								<use href="./images/icons.svg#icon-checkbox"></use>
+							</svg></span
+						><a href="" class="form-link">Privacy Policy</a></label>
+					</div>
+					<button type="submit" class="form-button">Send</button>
+				</form>
+			</div>
+		</div>
 		<!-- <script src="./js/scrypt.js"></script> -->
 	</body>
 </html>
