--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@
 				<div class="div-footer">
 					<p class="social-footer">Subscribe</p>
 					<form class="form-footer">
-						<label class="label-footer"></label>
-						<input type="email" name="email" placeholder="E-mail" class="input" />
+						<label class="label-footer"> <input type="email" name="email" placeholder="E-mail" class="input" /></label>
 						<button class="footer-button"
 							>Subscribe<svg class="icon-color" width="24" height="24">
 								<use href="./images/icons.svg#icon-subscribe"></use>
@@ -456,10 +455,12 @@
 							class="input-checkbox visually-hidden"
 						/>
 						<label for="user-privacy" class="label-checkbox"
-							>I accept the terms and conditions of the <span class="span-checkbox"><svg width="10" height="8">
-								<use href="./images/icons.svg#icon-checkbox"></use>
-							</svg></span
-						><a href="" class="form-link">Privacy Policy</a></label>
+							>I accept the terms and conditions of the
+							<span class="span-checkbox"
+								><svg width="10" height="8">
+									<use href="./images/icons.svg#icon-checkbox"></use></svg></span
+							><a href="" class="form-link">Privacy Policy</a></label
+						>
 					</div>
 					<button type="submit" class="form-button">Send</button>
 				</form>
