--- a/index.html
+++ b/index.html
@@ -454,12 +454,11 @@
 							value="true"
 							class="input-checkbox visually-hidden"
 						/>
-						<label for="user-privacy" class="label-checkbox"
-							>I accept the terms and conditions of the
+						<label for="user-privacy" class="label-checkbox">
 							<span class="span-checkbox"
 								><svg width="10" height="8">
 									<use href="./images/icons.svg#icon-checkbox"></use></svg></span
-							><a href="" class="form-link">Privacy Policy</a></label
+							>I accept the terms and conditions of the<a href="" class="form-link">Privacy Policy</a></label
 						>
 					</div>
 					<button type="submit" class="form-button">Send</button>
