--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 				</div>
 			</div>
 		</footer>
-		<div class="backdrop">
+		<div class="backdrop is-hidden">
 			<div class="div-form-hero">
 				<button class="close-form" type="button">
 					<svg class="close-icon" width="8" height="8">
@@ -458,7 +458,7 @@
 							<span class="span-checkbox"
 								><svg width="10" height="8">
 									<use href="./images/icons.svg#icon-checkbox"></use></svg></span
-							>I accept the terms and conditions of the<a href="" class="form-link">Privacy Policy</a></label
+							>I accept the terms and conditions of the<a href="" class="form-link"> Privacy Policy</a></label
 						>
 					</div>
 					<button type="submit" class="form-button">Send</button>
