--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 					<p class="social-footer">Subscribe</p>
 					<form class="form-footer">
 						<label class="label-footer"> <input type="email" name="email" placeholder="E-mail" class="input" /></label>
-						<button class="footer-button"
+						<button class="footer-button" type="submit"
 							>Subscribe<svg class="icon-color" width="24" height="24">
 								<use href="./images/icons.svg#icon-subscribe"></use>
 							</svg>
