--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 					<div class="form-hero">
 						<label class="label-input" for="phone">Phone</label>
 						<div class="input-hero-div">
-							<input type="number" name="phone" id="phone" class="input-hero" />
+							<input type="tel" name="phone" id="phone" class="input-hero" />
 							<svg width="18" height="24" class="svg-hero">
 								<use href="./images/icons.svg#icon-phone-black"></use>
 							</svg>
